{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 142,
  "lineage": "4b4310a7-1065-0de8-6735-41ca573802c6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a30e1fd65e1448eb",
            "arn": "arn:aws:ec2:us-east-1:305601180466:elastic-ip/eipalloc-0a30e1fd65e1448eb",
            "association_id": "eipassoc-098b6098ed71dcd0e",
            "domain": "vpc",
            "id": "eipalloc-0a30e1fd65e1448eb",
            "network_border_group": "us-east-1",
            "network_interface": "eni-082d372e4b5028f10",
            "private_dns": "ip-10-0-1-253.ec2.internal",
            "private_ip": "10.0.1.253",
            "public_dns": "ec2-100-24-139-215.compute-1.amazonaws.com",
            "public_ip": "100.24.139.215",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1"
          },
          "identity_schema_version": 0
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-080d7ca53377d1b60",
            "arn": "arn:aws:ec2:us-east-1:305601180466:elastic-ip/eipalloc-080d7ca53377d1b60",
            "association_id": "eipassoc-0a2f659bcd969f885",
            "domain": "vpc",
            "id": "eipalloc-080d7ca53377d1b60",
            "network_border_group": "us-east-1",
            "network_interface": "eni-06ab42cd4066325fc",
            "private_dns": "ip-10-0-2-181.ec2.internal",
            "private_ip": "10.0.2.181",
            "public_dns": "ec2-23-21-216-218.compute-1.amazonaws.com",
            "public_ip": "23.21.216.218",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins_master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-02fd066b86800f60c",
            "arn": "arn:aws:ec2:us-east-1:305601180466:instance/i-04ce515c5e6468198",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "jenkins-instance-profile",
            "id": "i-04ce515c5e6468198",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "1PU-Key-Pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d14bf927bd8cbde4",
            "private_dns": "ip-10-0-1-82.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.82",
            "public_dns": "ec2-3-239-35-39.compute-1.amazonaws.com",
            "public_ip": "3.239.35.39",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-043e3e1903c78d6d2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-010ae937875ab58ee",
            "tags": {
              "Name": "jenkins-master"
            },
            "tags_all": {
              "Name": "jenkins-master"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-005efe424cfe19023"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.jenkins_profile",
            "aws_iam_role.jenkins_role",
            "aws_security_group.jenkins_master",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:305601180466:internet-gateway/igw-0b86328ab75ef4f53",
            "id": "igw-0b86328ab75ef4f53",
            "owner_id": "305601180466",
            "region": "us-east-1",
            "tags": {
              "Name": "eks-igw"
            },
            "tags_all": {
              "Name": "eks-igw"
            },
            "vpc_id": "vpc-00b98f4bbacc2ded2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "eks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:305601180466:loadbalancer/app/eks-alb/2eb804d28be5e736",
            "arn_suffix": "app/eks-alb/2eb804d28be5e736",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "eks-alb-375253471.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:305601180466:loadbalancer/app/eks-alb/2eb804d28be5e736",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "eks-alb",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-0bdb89090f66eeb00"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-010ae937875ab58ee"
              },
              {
                "subnet_id": "subnet-0fd4ca1fbb55d8bb7"
              }
            ],
            "subnets": [
              "subnet-010ae937875ab58ee",
              "subnet-0fd4ca1fbb55d8bb7"
            ],
            "tags": {
              "Name": "eks-alb"
            },
            "tags_all": {
              "Name": "eks-alb"
            },
            "vpc_id": "vpc-00b98f4bbacc2ded2",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "eks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:305601180466:listener/app/eks-alb/2eb804d28be5e736/aeae38880cd06fc8",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:305601180466:targetgroup/eks-tg/faf19ae93b2ba9a0",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:305601180466:listener/app/eks-alb/2eb804d28be5e736/aeae38880cd06fc8",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:305601180466:loadbalancer/app/eks-alb/2eb804d28be5e736",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.eks",
            "aws_lb_target_group.eks",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "eks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:305601180466:targetgroup/eks-tg/faf19ae93b2ba9a0",
            "arn_suffix": "targetgroup/eks-tg/faf19ae93b2ba9a0",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:305601180466:targetgroup/eks-tg/faf19ae93b2ba9a0",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:305601180466:loadbalancer/app/eks-alb/2eb804d28be5e736"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "eks-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "eks-tg"
            },
            "tags_all": {
              "Name": "eks-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-00b98f4bbacc2ded2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a30e1fd65e1448eb",
            "association_id": "eipassoc-098b6098ed71dcd0e",
            "connectivity_type": "public",
            "id": "nat-0af07a46c4b4934d9",
            "network_interface_id": "eni-082d372e4b5028f10",
            "private_ip": "10.0.1.253",
            "public_ip": "100.24.139.215",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-010ae937875ab58ee",
            "tags": {
              "Name": "eks-nat-1"
            },
            "tags_all": {
              "Name": "eks-nat-1"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-080d7ca53377d1b60",
            "association_id": "eipassoc-0a2f659bcd969f885",
            "connectivity_type": "public",
            "id": "nat-09231c6b6d9e96319",
            "network_interface_id": "eni-06ab42cd4066325fc",
            "private_ip": "10.0.2.181",
            "public_ip": "23.21.216.218",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0fd4ca1fbb55d8bb7",
            "tags": {
              "Name": "eks-nat-2"
            },
            "tags_all": {
              "Name": "eks-nat-2"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:305601180466:network-acl/acl-09ac5b70bf4ed9790",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-09ac5b70bf4ed9790",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "305601180466",
            "region": "us-east-1",
            "subnet_ids": [
              "subnet-06866f759bd156887",
              "subnet-0d7000b6d85088f78"
            ],
            "tags": {
              "Name": "private-nacl"
            },
            "tags_all": {
              "Name": "private-nacl"
            },
            "vpc_id": "vpc-00b98f4bbacc2ded2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:305601180466:network-acl/acl-0fad8779c7c4c12d5",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0fad8779c7c4c12d5",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "305601180466",
            "region": "us-east-1",
            "subnet_ids": [
              "subnet-010ae937875ab58ee",
              "subnet-0fd4ca1fbb55d8bb7"
            ],
            "tags": {
              "Name": "public-nacl"
            },
            "tags_all": {
              "Name": "public-nacl"
            },
            "vpc_id": "vpc-00b98f4bbacc2ded2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-025eb2dca12c39d54",
            "network_acl_id": "acl-09ac5b70bf4ed9790",
            "region": "us-east-1",
            "subnet_id": "subnet-06866f759bd156887"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_acl.private",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-05d546ba0605773d9",
            "network_acl_id": "acl-09ac5b70bf4ed9790",
            "region": "us-east-1",
            "subnet_id": "subnet-0d7000b6d85088f78"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_acl.private",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-0dc56a59e73505a81",
            "network_acl_id": "acl-0fad8779c7c4c12d5",
            "region": "us-east-1",
            "subnet_id": "subnet-010ae937875ab58ee"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_acl.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-0cf0f5ea7cc67d394",
            "network_acl_id": "acl-0fad8779c7c4c12d5",
            "region": "us-east-1",
            "subnet_id": "subnet-0fd4ca1fbb55d8bb7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_acl.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:305601180466:route-table/rtb-025f02edd1d113027",
            "id": "rtb-025f02edd1d113027",
            "owner_id": "305601180466",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0af07a46c4b4934d9",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-rt-1"
            },
            "tags_all": {
              "Name": "private-rt-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-00b98f4bbacc2ded2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:305601180466:route-table/rtb-07904b3ffd7d0b908",
            "id": "rtb-07904b3ffd7d0b908",
            "owner_id": "305601180466",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-09231c6b6d9e96319",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-rt-2"
            },
            "tags_all": {
              "Name": "private-rt-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-00b98f4bbacc2ded2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:305601180466:route-table/rtb-094406505e2ccae78",
            "id": "rtb-094406505e2ccae78",
            "owner_id": "305601180466",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b86328ab75ef4f53",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-rt"
            },
            "tags_all": {
              "Name": "public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-00b98f4bbacc2ded2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0baf69eaf86fedc99",
            "region": "us-east-1",
            "route_table_id": "rtb-025f02edd1d113027",
            "subnet_id": "subnet-06866f759bd156887"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0be39643e91164f8e",
            "region": "us-east-1",
            "route_table_id": "rtb-07904b3ffd7d0b908",
            "subnet_id": "subnet-0d7000b6d85088f78"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eac3c709d34954c4",
            "region": "us-east-1",
            "route_table_id": "rtb-094406505e2ccae78",
            "subnet_id": "subnet-010ae937875ab58ee"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c49e1687c6abcafe",
            "region": "us-east-1",
            "route_table_id": "rtb-094406505e2ccae78",
            "subnet_id": "subnet-0fd4ca1fbb55d8bb7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:305601180466:security-group/sg-0bdb89090f66eeb00",
            "description": "Security group for EKS ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bdb89090f66eeb00",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "eks-alb-sg",
            "name_prefix": "",
            "owner_id": "305601180466",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eks-alb-sg"
            },
            "tags_all": {
              "Name": "eks-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-00b98f4bbacc2ded2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:305601180466:security-group/sg-088032447e2e4a0bb",
            "description": "Security group for EKS cluster",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-088032447e2e4a0bb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "eks-cluster-sg",
            "name_prefix": "",
            "owner_id": "305601180466",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eks-cluster-sg"
            },
            "tags_all": {
              "Name": "eks-cluster-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-00b98f4bbacc2ded2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:305601180466:security-group/sg-0bc620d2c0c3e0926",
            "description": "Security group for EKS worker nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bc620d2c0c3e0926",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-088032447e2e4a0bb"
                ],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0bdb89090f66eeb00"
                ],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "eks-worker-sg",
            "name_prefix": "",
            "owner_id": "305601180466",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eks-worker-sg"
            },
            "tags_all": {
              "Name": "eks-worker-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-00b98f4bbacc2ded2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.eks_cluster",
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins_master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:305601180466:security-group/sg-005efe424cfe19023",
            "description": "Security group for Jenkins master node",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-005efe424cfe19023",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "jenkins-master-sg",
            "name_prefix": "",
            "owner_id": "305601180466",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "jenkins-master-sg"
            },
            "tags_all": {
              "Name": "jenkins-master-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-00b98f4bbacc2ded2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:305601180466:subnet/subnet-06866f759bd156887",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06866f759bd156887",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "305601180466",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "private-subnet-1",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "private-subnet-1",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-00b98f4bbacc2ded2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:305601180466:subnet/subnet-0d7000b6d85088f78",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d7000b6d85088f78",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "305601180466",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "private-subnet-2",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "private-subnet-2",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-00b98f4bbacc2ded2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:305601180466:subnet/subnet-010ae937875ab58ee",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-010ae937875ab58ee",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "305601180466",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "public-subnet-1",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "public-subnet-1",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-00b98f4bbacc2ded2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:305601180466:subnet/subnet-0fd4ca1fbb55d8bb7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fd4ca1fbb55d8bb7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "305601180466",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "public-subnet-2",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "public-subnet-2",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-00b98f4bbacc2ded2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:305601180466:vpc/vpc-00b98f4bbacc2ded2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06435c7188a1e0f5e",
            "default_route_table_id": "rtb-04cc06efaa3e44435",
            "default_security_group_id": "sg-0686743fb46f549cc",
            "dhcp_options_id": "dopt-010d492b6b9ed4ed9",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00b98f4bbacc2ded2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04cc06efaa3e44435",
            "owner_id": "305601180466",
            "region": "us-east-1",
            "tags": {
              "Name": "eks-vpc"
            },
            "tags_all": {
              "Name": "eks-vpc"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    }
  ]
}